Update Hackathon website for the FY23Q4 one

--- a/sites/uncategorized/source/community/hackathon/index.html.haml
+++ b/sites/uncategorized/source/community/hackathon/index.html.haml
@@ -21,8 +21,8 @@ extra_js:
   "name": "GitLab Hackathon",
   "description": "Get together with the GitLab community to contribute, learn and win exciting prizes.",
   "organizer" : "GitLab",
-  "startDate": "2022-08-02",
-  "endDate": "2022-08-09",
+  "startDate": "2022-11-29",
+  "endDate": "2022-12-06",
   "eventStatus": "https://schema.org/EventScheduled",
   "eventAttendanceMode": "https://schema.org/OnlineEventAttendanceMode",
   "location": {
@@ -47,7 +47,7 @@ extra_js:
           :markdown
             Get together with the GitLab community to contribute, learn and win exciting prizes.
             <i class="fab fa-gitlab fa-fw" style="color:rgb(252,109,38); font-size:.85em" aria-hidden="true"></i>
-            Join us on August 2 - 9, 2022!
+            Join us on November 29 - December 6, 2022!
             <i class="fab fa-gitlab fa-fw" style="color:rgb(252,109,38); font-size:.85em" aria-hidden="true"></i>
             <br/>
             <br/>
@@ -63,6 +63,8 @@ extra_js:
         .block-content
           %h2.block-title Joining in
           :markdown
+            <b>Important information: you need to <a href="https://www.meetup.com/gitlab-virtual-meetups/events/289252392/">RSVP at our meetup.com event</a> for having your MRs count towards the prizes.</b>
+            <br/>
             The Hackathon is a virtual event open to anyone who is interested in contributing code, documentation, translations, UX designs and more to GitLab. By participating in GitLab's Hackathon, you have the opportunity to work on issues that matter to you and advance your skills/experience while joining a global, diverse and inclusive team of contributors and GitLab team members.
             <br/>
             For this Hackathon, we are introducing the following contribution areas: Website, Security, Front-end, Back-end, Documentation. Prizes are awarded to participants for having Merge Requests (MRs) merged that contribute to the issues/epics linked below on each contribution area.
@@ -73,6 +75,7 @@ extra_js:
             **Prior the Hackathon**
 
             1. Block the dates on your calendar, or [subscribe](https://calendar.google.com/calendar/u/0?cid=Z2l0bGFiLmNvbV9ldGE3bzR0bjRidG44aDBmOGVpZDVxOThyb0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t) to the [GitLab Developer Evangelism calendar](https://about.gitlab.com/handbook/marketing/community-relations/evangelist-program/#upcoming-events) that includes the Hackathon dates and calls.
+            1. <a href="https://www.meetup.com/gitlab-virtual-meetups/events/289252392/">RSVP at our meetup.com event</a> for having your MRs counted towards the prizes
             1. Identify an issue (or more) and leave a comment indicating your interest in working on this/these. That way it's less likely for multiple people to be working on the same issue.
             <br>
             
@@ -97,7 +100,6 @@ extra_js:
             | Security | [Contributing to GitLab guide](https://about.gitlab.com/community/contribute/development/#development) | [Qualifying issues](https://gitlab.com/groups/gitlab-org/-/issues?sort=created_date&state=opened&label_name[]=Security+Hackathon) |
             | Front-end | [Frontend Development Guidelines](https://docs.gitlab.com/ee/development/fe_guide/) <br> - [Design and User Interface Changes guide](https://docs.gitlab.com/ee/development/contributing/design.html) | - [UX-related Issues](https://gitlab.com/groups/gitlab-org/-/issues/?sort=weight&state=opened&label_name%5B%5D=UX&label_name%5B%5D=Seeking%20community%20contributions),  [UX-related issues good for new contributors](https://gitlab.com/groups/gitlab-org/-/issues/?sort=weight&state=opened&label_name%5B%5D=UX&label_name%5B%5D=good%20for%20new%20contributors&first_page_size=100) <br> - [Frontend-related Issues](https://gitlab.com/groups/gitlab-org/-/issues/?sort=weight&state=opened&label_name%5B%5D=frontend&label_name%5B%5D=Seeking%20community%20contributions),  [Frontend-related issues good for new contributors](https://gitlab.com/groups/gitlab-org/-/issues/?sort=weight&state=opened&label_name%5B%5D=frontend&label_name%5B%5D=good%20for%20new%20contributors&first_page_size=100)|
             | Back-end | [Contributing to GitLab guide](https://about.gitlab.com/community/contribute/development/#development) <br> - [GitLab's Architecture](https://docs.gitlab.com/ee/development/architecture.html) | - [GitLab Agent for Kubernetes](https://docs.gitlab.com/ee/user/clusters/agent/) : [All Issues](https://gitlab.com/gitlab-org/cluster-integration/gitlab-agent/-/issues/?sort=weight&state=opened&label_name%5B%5D=Seeking%20community%20contributions&first_page_size=20), [Issues good for new contributors](https://gitlab.com/gitlab-org/cluster-integration/gitlab-agent/-/issues?label_name%5B%5D=good+for+new+contributors) <br> - [Stage: Package all issues](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Apackage&label_name%5B%5D=Accepting%20merge%20requests&first_page_size=100), [Issues good for new contributors](https://gitlab.com/gitlab-org/gitlab/-/issues?sort=created_date&state=opened&label_name%5B%5D=group::package&label_name%5B%5D=good+for+new+contributors) <br> - [Group: Respond issues](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=weight_desc&state=opened&label_name%5B%5D=group%3A%3Arespond&label_name%5B%5D=Seeking%20community%20contributions), [Issues good for new contributors](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=weight_desc&state=opened&label_name%5B%5D=group%3A%3Arespond&label_name%5B%5D=good%20for%20new%20contributors&first_page_size=100) <br> - [Group: Optimize all issues](https://gitlab.com/groups/gitlab-org/-/issues?sort=created_date&state=opened&label_name[]=group::optimize&label_name[]=Seeking+community+contributions), [Issues good for new contributors](https://gitlab.com/groups/gitlab-org/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aoptimize&label_name%5B%5D=good%20for%20new%20contributors&first_page_size=20) <br> - [Group: Source Code all issues](https://gitlab.com/groups/gitlab-org/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Asource%20code&label_name%5B%5D=Seeking%20community%20contributions&first_page_size=20), [Issues good for new contributors](https://gitlab.com/groups/gitlab-org/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Asource%20code&label_name%5B%5D=good%20for%20new%20contributors&first_page_size=20) <br> - [Group: Editor All Issues](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=weight_desc&state=opened&label_name%5B%5D=group%3A%3Aeditor&label_name%5B%5D=Seeking%20community%20contributions&assignee_id=None&first_page_size=100), [Issues good for new contributors](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=weight_desc&state=opened&label_name%5B%5D=group%3A%3Aeditor&label_name%5B%5D=good%20for%20new%20contributors&assignee_id=None&first_page_size=100) <br> - [Group: Import All Issues](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=weight_desc&state=opened&label_name%5B%5D=Seeking%20community%20contributions&label_name%5B%5D=group%3A%3Aimport), [Issues good for new contributors](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=weight_desc&state=opened&label_name%5B%5D=good%20for%20new%20contributors&label_name%5B%5D=group%3A%3Aimport) <br> - [Group: Pipeline execution All Issues](https://gitlab.com/gitlab-org/gitlab/-/issues?sort=created_date&state=opened&label_name[]=group::pipeline+execution&label_name[]=Seeking+community+contributions), [Issues good for new contributors](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Apipeline%20execution&label_name%5B%5D=good%20for%20new%20contributors&first_page_size=100) <br> - [Group: Release All Issues](https://gitlab.com/gitlab-org/gitlab/-/issues?sort=created_date&state=opened&label_name[]=group::release&label_name[]=Seeking+community+contributions), [Issues good for new contributors](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Arelease&label_name%5B%5D=good%20for%20new%20contributors&first_page_size=20) <br> - [Group: Compliance](https://gitlab.com/groups/gitlab-org/-/epics/8497) |
-            | Technical Writing | [Contributing to documentation](https://about.gitlab.com/community/contribute/documentation/) | [Documentation issues](https://gitlab.com/gitlab-org/gitlab/-/issues?scope=all&state=opened&label_name%5B%5D=good%20for%20new%20contributors&label_name%5B%5D=Accepting%20merge%20requests&label_name%5B%5D=documentation) | 
             | [Website](https://gitlab.com/), [Handbook](https://about.gitlab.com/handbook/) | You can contribute to any page, by clicking "Edit in Web IDE" located in the footer of the page. | Although there is not a specific list of issues to contribute to, we encourage Hackathon participants to explore the website for typos, broken links and outdated information.  |
           
             
@@ -120,8 +122,8 @@ extra_js:
           :markdown
             <p class="alert alert-info">
             <i class="fas fa-info-circle" aria-hidden="true" style="color: rgb(49, 112, 143);"></i>
-            All qualifying MRs must be submitted between <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220802T12&p1=%3A">August 2nd 12:00 UTC</a> & <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220809T12&p1=%3A">August 9th 12:00 UTC</a> and be <em>merged</em> by
-            <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220915T23&p1=%3A">September 15th at 23:00 UTC</a>.
+            All qualifying MRs must be submitted between <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20221129T12&p1=%3A">November 29th 12:00 UTC</a> & <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20221206T12&p1=%3A">December 6th 12:00 UTC</a> and be <em>merged</em> by
+            <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20230106T23&p1=%3A">January 6th at 23:00 UTC</a>.
             </p>
 
             | Categories | Eligibility | Prizes  | Description  |
@@ -159,38 +161,38 @@ extra_js:
             %tbody
               %tr
                 %td
-                  August 2nd
+                  November 29th
                 %td
-                  = link_to "14:30 - 15:00,", "https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220802T1430&p1=1440&am=30"
+                  = link_to "14:30 - 15:00,", "https://www.timeanddate.com/worldclock/fixedtime.html?iso=20221129T1430&p1=1440&am=30"
                   = link_to "Add it to your calendar", "https://calendar.google.com/calendar/u/0?cid=Z2l0bGFiLmNvbV9ldGE3bzR0bjRidG44aDBmOGVpZDVxOThyb0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
                 %td
                   Hackathon Kickoff - Learn all about our new Hackathon format, and get ready to start contributing
                 %td
-                  <a href="https://gitlab.zoom.us/j/96890473352?pwd=dWZKNERHeXdOMlhNYkFpZ25LbDZIZz09">Zoom link to Join.</a>
+                  <a href="https://gitlab.zoom.us/j/96851574172?pwd=K0laVUdKZGRKekF1bGpmUUZMS3phUT09">Zoom link to Join.</a>
                 %td
                   = link_to "Christos Bacharakis (@cbacharakis)", "https://gitlab.com/cbacharakis"
               %tr
                 %td
-                  August 4th
+                  December 1st
                 %td
-                  = link_to "14:30 - 15:00,", "https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220804T1430&p1=1440&am=30"
-                  = link_to "Add it to your calendar", "https://www.meetup.com/gitlab-virtual-meetups/events/285654099/"
+                  = link_to "14:30 - 15:00,", "https://www.timeanddate.com/worldclock/fixedtime.html?iso=20221201T1430&p1=1440&am=30"
+                  = link_to "Add it to your calendar", "https://calendar.google.com/calendar/u/0?cid=Z2l0bGFiLmNvbV9ldGE3bzR0bjRidG44aDBmOGVpZDVxOThyb0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
                 %td
                   Office hour call - Discuss anything related to the Hackathon or GitLab in general
                 %td
-                  <a href="https://gitlab.zoom.us/j/98891352165?pwd=Y0F4K256TXNwanZieTlkR1pXOWY3dz09">Zoom link to Join.</a>
+                  <a href="https://gitlab.zoom.us/j/92870319015?pwd=OEtRalM5VXJHN1F1aldhTE1JajRYZz09">Zoom link to Join.</a>
                 %td
                   = link_to "Christos Bacharakis (@cbacharakis)", "https://gitlab.com/cbacharakis"
               %tr
                 %td
-                  August 9th
+                  December 6th
                 %td
-                  = link_to "14:30 - 15:00,", "https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220809T1430&p1=1440&am=30"
+                  = link_to "14:30 - 15:00,", "https://www.timeanddate.com/worldclock/fixedtime.html?iso=20221206T1430&p1=1440&am=30"
                   = link_to "Add it to your calendar", "https://calendar.google.com/calendar/u/0?cid=Z2l0bGFiLmNvbV9ldGE3bzR0bjRidG44aDBmOGVpZDVxOThyb0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
                 %td
                   Hackathon Wrap-up call - The Hackathon is over, what's next?!
                 %td
-                  <a href="https://gitlab.zoom.us/j/97404671044?pwd=MUxjcG1JU01ZanJpR243WkRkeDdZQT09">Zoom link to Join.</a>
+                  <a href="https://gitlab.zoom.us/j/93382102693?pwd=U3k4Z0F6UGpuaTFsaXlRcURJRzJFQT09">Zoom link to Join.</a>
                   
                 %td
                   = link_to "Christos Bacharakis (@cbacharakis)", "https://gitlab.com/cbacharakis"
@@ -273,8 +275,8 @@ extra_js:
                       %i.fa.fa-angle-down.pull-right
                     .faq-answer
                       :markdown
-                        - <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220802T12&p1=%3A">August 2nd 12:00 UTC</a> &amp; <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220809T12&p1=%3A">August 9th 12:00 UTC</a>: all MRs must be submitted
-                        - [September 15th 23:00 UTC](https://www.timeanddate.com/worldclock/fixedtime.html?iso=20220915T23&p1=%3A): all qualifying MRs must have been _merged_
+                        - <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20221129T12&p1=%3A">November 29th 12:00 UTC</a> &amp; <a href="https://www.timeanddate.com/worldclock/fixedtime.html?iso=20221206T12&p1=%3A">December 6th 12:00 UTC</a>: all MRs must be submitted
+                        - [January 6th 23:00 UTC](https://www.timeanddate.com/worldclock/fixedtime.html?iso=20230106T23&p1=%3A): all qualifying MRs must have been _merged_
               %ol.faq-container.list-unstyled
                 %li.faq-item
                   .faq-inner-item
@@ -283,4 +285,4 @@ extra_js:
                       %i.fa.fa-angle-down.pull-right
                     .faq-answer
                       :markdown
-                        After the 15th of September, the team will review all the qualifying MRs merged and reach out to contributors. Please expect an email by the 26th of September.
+                        After the 6th of January, the team will review all the qualifying MRs merged and reach out to contributors. Please expect an email by the 15th of January 2023.
