Delete Employee Information Privacy Policy

--- a/sites/handbook/source/handbook/people-policies/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-policies/index.html.md.erb
@@ -106,17 +106,8 @@ Defining the terms from the sentence above:
      * "It's always OK to ask for help."
      * "It’s hard for me to understand exactly what you’re going through, but I can see that it’s distressing for you."
 
-Any questions or concerns? Please feel free to speak with anyone in People Ops.
+Any questions or concerns? Please feel free to contact the People Connect team in the #people-connect Slack channel or email people-connect@gitlab.com.
 
-### Employee Information Privacy
-
-GitLab respects the confidentiality of the personal information of employees and contractors. This includes employee and contractor medical and personnel records. All team member records are kept in [Workday](/handbook/people-group/#using-Workday). Team members have self service access to their profile. Where available, documents and information are shared with the team member within the platform. Access to personal information is only authorized when there is a legitimate and lawful reason, and access is only granted to appropriate personnel. Requests for confidential employee or contractor information from anyone outside our company under any circumstances must be approved in accordance with applicable laws. It is important to remember, however, that employees and contractors should have no expectation of privacy with regard to normal workplace communication on any personal property used for GitLab business.
-
-If there is no requirement within someone's job description to be public-facing, then team members can opt-out of any public exposure. Team members can opt-out of being added to the [team page](/company/team/) or what content about them is shown on the team page and can use either only their initials or an alias if desired. Since GitLab publishes much of our content, including video calls and meetings, the only way to ensure no unwanted exposure from these videos is to have video turned off and initials or an alias added to the Zoom profile name whenever a call is being recorded. Zoom shows whether a call is being recorded at the top right of the video screen, and team members are always encouraged to ask if a video will be shared or not. For any GitLab livestreams through YouTube, a team member can watch and comment through YouTube instead of through the internal video call. Any questions can be sent directly to our People Business Partners or CPO.
-
-## Access to Personnel Records
-
-Current and former team members may request a copy of their personnel file in writing to `dpo@gitlab.com`. Additionally, team members can access certain records at anytime via Workday. 
 
 ### Confidentiality
 
