Update exciting things for Oct

--- a/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-execution/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-execution/index.html.md.erb
@@ -46,9 +46,9 @@ Not included in the Pipeline Execution group's domain:
 ## Exciting things and accomplishments
 This section will list the top three most recent, exciting accomplishments from the team.
 
+* We rolled out the [cost factor](https://gitlab.com/gitlab-org/gitlab/-/issues/337245) of `1` for all public projects on shared SaaS Runners which was a huge step in the milestone.
+* We welcomed two new Engineers to the team, [Tianwen Chen](https://gitlab.com/tianwenchen) and [Kasia Misirli](https://gitlab.com/Kasia_Misirli)!!
 * We welcomed our new Engineering manager to the team, [Caroline Simpson](https://gitlab.com/carolinesimpson)!
-* We gathered [feedback](https://gitlab.com/gitlab-org/gitlab/-/issues/365902) about what pipeline statistics users are looking for and are actionable in an experiment on the Pipeline page.
-* The Verify Section all participated in a [Hackathon week](https://about.gitlab.com/blog/2022/07/28/verify-week-hackathon/) in July creating some great new features and proofs of concept.
 
 ## Team Members
 
