Added number of pages and word count

--- a/sites/handbook/source/handbook/product/ux/technical-writing/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/ux/technical-writing/index.html.md.erb
@@ -233,6 +233,27 @@ For merge request reviews:
 - GitLab UI: https://gitlab.com/gitlab-org/gitlab-ui/issues/598, https://gitlab.com/gitlab-org/gitlab-ui/issues/624
 -->
 
+## Docs site stats
+
+The technical writing team supports a large amount of content.
+
+The number of pages in the four primary repositories (GitLab, Omnibus, Charts, and Runner):
+
+| Date          | # of pages |
+|---------------|------------|
+| Jan 2022      | 1,562      |
+| June 2022     | 1,633      |
+| Sept 2022     | 1,895      |
+
+The number of words in these repositories:
+
+| Date          | Word count |
+|---------------|------------|
+| May 2020      | 1,190,371  |
+| January 2022  | 2,017,183  |
+| June 2022     | 2,166,052  |
+| Oct 2022      | 2,264,852  |
+
 ## Technical Writer PTO
 
 When Technical Writers take [paid time off](/handbook/paid-time-off/), the rest of the team provides coverage for them.
