--- a/sites/handbook/source/handbook/engineering/development/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/index.html.md.erb
@@ -147,7 +147,8 @@ Calibration and assesment are two different steps in the process. The assessment
 
 For Development specifically, we will calibrate:
 
-1. Anyone in [Boxes 1 or 9](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
+1. Anyone in [Box 1](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
+1. Anyone in Box 9 who has been with GitLab longer than 3 months.
 1. Anyone assessed as `Exceeding` for Performance
 1. Anyone hired in the last 3 months assessed as `Performing` or `Exceeding` for Performance aligned with [eligibility guidance](https://about.gitlab.com/handbook/people-group/talent-assessment/#eligibility) or `Growing` or `Exceeding` for Growth Potential
 1. Anyone identified as Key Talent
