Update to include specific language for ISO 11.2.8

--- a/sites/handbook/source/handbook/security/index.html.md.erb
+++ b/sites/handbook/source/handbook/security/index.html.md.erb
@@ -153,6 +153,7 @@ If you have a question or concern and need to speak with the Security Team, you 
 1. Set up a screen saver with **password lock** on your laptop with a timeout of 5 minutes or less. GitLab is currently utilizing [JAMF](/handbook/business-technology/team-member-enablement/onboarding-access-requests/endpoint-management/) for endpoint management and can assist with this step.
 1. Never leave your unlocked computer **unattended**. Activate the screensaver,
   lock the desktop, or close the lid.
+1. Terminate active sessions when finished, unless they can be secured by an appropriate locking mechanism, like a password protected screensaver.  Further, log-off from applications or network services when no longer needed.
 1. When backing up data team members should use GitLab's Google Drive. Our deployment is regularly tested and data at rest is encrypted by default. For alternative options, please reach out to IT.
 
 1. [Purchase](/handbook/spending-company-money) (if necessary) and install
