Update Courtney and Donique assignments

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -188,6 +188,7 @@
 [Alexander Tanayno]: /company/team/#atanayno
 [TBD (SM)]: /company/team/
 [Donique Smit]: /company/team/#doniquesmit
+[Donique Smit (Acting)]: /company/team/#doniquesmit
 [Catalin Irimie]: /company/team/#cirimie
 [John Long]: /company/team/#john_long
 [Katrin Leinweber]: /company/team/#katrinleinweber
@@ -387,6 +388,7 @@
 [Ragnar Hardarson]: /company/team/#rhardarson
 [Michael Lunøe]: /company/team/#mlunoe
 [Courtney Meddaugh]: /company/team/#courtmeddaugh
+[Courtney Meddaugh (Acting)]: /company/team/#courtmeddaugh
 [Corinna Gogolok]: /company/team/#cwiesner
 [Amparo Luna]: /company/team/#a_luna
 [Mark Chao]: /company/team/#lulalala
