Create new Job Family for Senior Channel Operations Manager (Senior IC) role

--- a/sites/uncategorized/source/job-families/sales/sales-operations/index.html.md.erb
+++ b/sites/uncategorized/source/job-families/sales/sales-operations/index.html.md.erb
@@ -203,22 +203,28 @@ The Senior Director, Sales Operations is a [grade 11](/handbook/total-rewards/co
 
 * Demonstrated progressive relevant experience and an understanding of sales and or channel operations
 
-#### Channel Operations Manager Responsibilities
+#### Manager, Sales Operations (Channel)
 
-* Extends that of the Manager, Sales Operations Responsibilities
+* Extends that of the Manager, Sales Operations
+* Demonstrated progressive experience in Sales Operations specific to Channel 
+
+#### Senior Channel Operations Manager Responsibilities
+
+* Extends that of the Senior Manager, Sales Operations Responsibilities
 * Develop, manage, and improve operational processes for the channel (Distributor, Reseller, MSP, GSI) sales organization
 * Provide operational support and enablement to sales, partners, and cross-functional teams for channel related inquiries (e.g., opportunities, quotes and orders, reporting/dashboards)
-* Manage relationships with our global distributors and collaborate to develop scalable QTC processes for two-tier opportunities
+* Work directly with sales and partners to identify operational pain points, then design and implement scalable solutions
 * Collaborate with Partner Programs team to operationalize program changes and ensure compliance with requirements
-* Lead cross-functional projects including project identification, documentation, coordination, and successful execution and post-launch management
+* Manage relationships with our global distributors and collaborate to develop scalable QTC processes for two-tier opportunities
+* Lead cross-functional projects from end-to-end including project identification, documentation, coordination, and successful execution and post-launch management
 * Implement tools and processes for the sales organization that improve efficiency, effectiveness, and productivity
 * Identify opportunities for process automation and optimization, with a focus on scalability and driving significant growth
-* Create and implement reporting and dashboards for the channel organization that improve efficiency, effectiveness, and productivity
 * Build and deliver ad hoc reporting to support projects and company OKRs
+* Create and implement reporting and dashboards for the channel organization that improve efficiency, effectiveness, and productivity
 
-#### Channel Operations Manager Requirements
+#### Senior Channel Operations Manager Requirements
 
-* Extends that of the Manager, Sales Operations Requirements
+* Extends that of the Senior Manager, Sales Operations Requirements
 * Demonstrated progressive channel experience and understanding of channel operations
 * Experience working directly with sales/channel sales teams and partners
 * Excellent problem solving, project management, interpersonal and organizational skills
@@ -229,11 +235,6 @@ The Senior Director, Sales Operations is a [grade 11](/handbook/total-rewards/co
 * Experience with QTC process, tools, and automation
 * Interest in GitLab, and open source software
 * You share our [values](/handbook/values/) and work in accordance with those values
-
-#### Manager, Sales Operations (Channel)
-
-* Extends that of the Manager, Sales Operations
-* Demonstrated progressive experience in Sales Operations specific to Channel 
 
 #### Director, Sales Operations (Channel) Responsibilities
 
