Add team member YML file slugs to category names

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -154,6 +154,15 @@
 [Jerry Seto]: /company/team/#j.seto
 [Patrick Cyiza]: /company/team/#jpcyiza
 [Gavin Hinfey]: /company/team/#ghinfey
+[Caroline Simpson]: /company/team/#carolinesimpson
+[Carrie Kroutil]: /company/team/#ckroutil
+[Nicolò Maria Mezzopera]: /company/team/#nicolo-maria-mezzopera
+[Seb Pahl]: /company/team/#sebastien-pahl
+[Paige Cordero]: /company/team/#p_cordero
+[Michael Lunøe]: /company/team/#michael-lunoe
+[Michael Lunøe (Interim)]: /company/team/#michael-lunoe
+[John Cai]: /company/team/#jcaigitlab
+[Juan Silva]: /company/team/#juan-silva.yml
 
 <%# PMM %>
 [Cindy Blake]: /company/team/#cblake2000
@@ -163,6 +172,9 @@
 [Brian Glanz]: /company/team/#brianglanz
 [Parker Ennis]: /company/team/#parker_ennis
 [Aathira Nair]:/company/team/#anair5
+[Heather Simpson]: /company/team/#heathersimpson
+[Brian Mason]: /company/team/#brianmason
+[Jennifer Bianchini]: /company/team/#jenniferbianchini
 
 [Shaun McCann]: /company/team/#shaunmccann
 [Lyle Kozloff]: /company/team/#lkozloff
@@ -202,6 +214,11 @@
 [Ben King]: /company/team/#benjaminking
 [Brie Carranza]: /company/team/#bcarranza
 [Chris Kaburu]: /company/team/#ckaburu
+[Brad Sevy]: /company/team/#bradsevy
+[Shem Gyll]: /company/team/#shem-gyll
+[Vlad Stoianovici]: /company/team/#vlad-stoianovici
+[Alex Ives]: /company/team/#alexives
+[Barry Firman]: /company/team/#gitlabbarry
 
 
 [Suri Patel]: /company/team/#suripatel
@@ -293,6 +310,8 @@
 [Jennifer Mundy]: /company/team/#j.mundy
 [Philip Joyce]: /company/team/#philipjoyce
 [Chris Micek]: /company/team/#chrismicek
+[Ashley Knobloch]: /company/team/#aknobloch
+[Nicholas Hertz]: /company/team/#nickhertz
 
 [Aleksandr Lyubenkov]: /company/team/#alyubenkov
 [Anastasia McDonald]: /company/team/#a_mcdonald
@@ -338,6 +357,7 @@
 [Nick Malcolm]: /company/team/#nmalcolm
 [Greg Alfaro]: /company/team/#galfaro2
 [Ameya Darshan]: /company/team/#ameyadarshan
+[Kevin Morrison]: /company/team/#kmorrison1
 
 [John Skarbek]: /company/team/#skarbek
 [Devin Sylva]: /company/team/#devin
