Add new directs-group cohort to handbook

--- a/sites/uncategorized/source/company/team/structure/index.html.md.erb
+++ b/sites/uncategorized/source/company/team/structure/index.html.md.erb
@@ -272,8 +272,8 @@ Past, present and future Directs-Group Particpants will be listed here.
 | Term | Directs-Group Cohort Members |
 |-------------|--------------------------------|
 | 2022-01 to 2022-10 | Urja Patel, Matt Taylor, Rob Allen, David Hong, Melissa Smolenksy, Christopher Lefelhocz, Kenny Johnston, Justin Farris |
-| 2022-11 to 2023-08 | TBD |
-| 2023-09 to 2023-06 | TBD |
+| 2022-11 to 2023-07 | Jim Gladen, Pattie Egan, Dave Steer, Hillary Benson, Eliran Mesika (cohort lead), Stan Hu, Christie Lenneville, Ryan O'Nell, Sid Sijbrandij (E-Group Sponsor) |
+| 2023-08 to 2023-06 | TBD |
 
 ### Cohort project
 
