--- a/sites/uncategorized/source/job-families/chief-executive-officer/index.html.md.erb
+++ b/sites/uncategorized/source/job-families/chief-executive-officer/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 layout: job_family_page
-title: "Chief Executive Office Roles"
+title: "Chief Executive Officer"
 ---
 
 The CEO reports to the Board of Directors of GitLab, Inc.
